--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -64,3 +64,51 @@
     height: 400px;
     border-radius: 12px;
 }
+#aminities{
+    display: flex;
+    height: 500px;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+    padding: 30px
+}
+.am1, .am2, .am3, .am4{
+    /* border: 1px solid black; */
+    width: 300px;
+    height: 400px;
+    padding: 40px;
+    border-radius: 15px;
+    background-color: rgb(209, 209, 209);
+    text-align: center;
+    
+}
+.contacts{
+    height: 300px;
+    text-align: center;
+    padding: 40px;
+    background-color: white
+}
+.contactContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+
+
+}
+.phone, .address{
+    height: 250px;
+    width: 200px;
+    border: 1px black solid;
+    align-content: center;
+    border-radius: 15px;
+    background-color:  rgb(209, 209, 209);
+}
+.footer{
+    background-color: black;
+    color: white;
+    height: 40px;
+    font-size: 20px;
+    align-content: center;
+    
+}
